compiler/tools/fpp-check/test/component_instance_def/invalid_negative_int.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/component_instance_def/invalid_negative_int.fpp: 5.23
instance c: C base id -1
                      ^
error: invalid integer value -1
value may not be negative
